// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/grid/hidden should render with children 1`] = `
<span
  className=""
>
  Text
</span>
`;

exports[`components/grid/hidden should render with classname 1`] = `
<span
  className="foo"
>
  Text
</span>
`;

exports[`components/grid/hidden should render with component 1`] = `
<li
  className=""
>
  Text
</li>
`;

exports[`components/grid/hidden should render with desktop 1`] = `
<span
  className="Hidden__desktop"
>
  Text
</span>
`;

exports[`components/grid/hidden should render with mobile 1`] = `
<span
  className="Hidden__mobile"
>
  Text
</span>
`;

exports[`components/grid/hidden should render with print 1`] = `
<span
  className="Hidden__print"
>
  Text
</span>
`;

exports[`components/grid/hidden should render with props 1`] = `
<span
  className=""
  data-automation="foo"
>
  Text
</span>
`;

exports[`components/grid/hidden should render with screen 1`] = `
<span
  className="Hidden__screen"
>
  Text
</span>
`;

exports[`components/grid/hidden should render without children 1`] = `
<span
  className=""
/>
`;
